--- a/src/main/resources/assets/potion_shrines/lang/en_us.json
+++ b/src/main/resources/assets/potion_shrines/lang/en_us.json
@@ -11,5 +11,7 @@
   "tooltip.potion_shrines.cooldown": "Cooldown",
   "tooltip.potion_shrines.radius": "Radius",
   "tooltip.potion_shrines.players": "Players",
-  "tooltip.potion_shrines.monsters": "Monsters"
+  "tooltip.potion_shrines.monsters": "Monsters",
+  "gui.potion_shrines.shrine_options": "Shrine Options",
+  "gui.potion_shrines.effect": "Effect"
 }
