--- a/src/main/resources/assets/potion_shrines/lang/en_us.json
+++ b/src/main/resources/assets/potion_shrines/lang/en_us.json
@@ -12,6 +12,13 @@
   "tooltip.potion_shrines.radius": "Radius",
   "tooltip.potion_shrines.players": "Players",
   "tooltip.potion_shrines.monsters": "Monsters",
+  "tooltip.potion_shrines.replenish": "Replenish",
+
   "gui.potion_shrines.shrine_options": "Shrine Options",
-  "gui.potion_shrines.effect": "Effect"
+  "gui.potion_shrines.effect": "Effect",
+  "gui.potion_shrines.duration": "Duration",
+  "gui.potion_shrines.amplifier": "Lvl",
+
+  "potion_shrines.false": "False",
+  "potion_shrines.true": "True"
 }
