Added Jump Dash effect

--- a/src/main/resources/assets/potion_shrines/lang/en_us.json
+++ b/src/main/resources/assets/potion_shrines/lang/en_us.json
@@ -30,8 +30,8 @@
   "gui.potion_shrines.itemNbt": "⎘ Item NBT",
 
   "potion_shrines.false": "False",
-  "potion_shrines.true": "True"
   "potion_shrines.true": "True",
 
   "effect.potion_shrines.xp_boost": "XP Boost",
+  "effect.potion_shrines.jump_dash": "Jump Dash"
 }
