--- a/src/main/resources/assets/potion_shrines/lang/en_us.json
+++ b/src/main/resources/assets/potion_shrines/lang/en_us.json
@@ -1,8 +1,8 @@
 {
-  "item.potion_shrines.shrine": "Simple Shrine",
-  "block.potion_shrines.shrine": "Simple Shrine",
-  "item.potion_shrines.shrine_decrepit": "Decrepit Simple Shrine",
-  "block.potion_shrines.shrine_decrepit": "Decrepit Simple Shrine",
+  "item.potion_shrines.simple_shrine": "Simple Shrine",
+  "block.potion_shrines.simple_shrine": "Simple Shrine",
+  "item.potion_shrines.simple_shrine_decrepit": "Decrepit Simple Shrine",
+  "block.potion_shrines.simple_shrine_decrepit": "Decrepit Simple Shrine",
   "item.potion_shrines.aoe_shrine": "AoE Shrine",
   "block.potion_shrines.aoe_shrine": "AoE Shrine",
   "item.potion_shrines.aoe_shrine_decrepit": "Decrepit AoE Shrine",
